--- a/wordpress/gik-theme/style.css
+++ b/wordpress/gik-theme/style.css
@@ -9143,7 +9143,7 @@ section h1 {
   background: white;
   margin-right: 3px;
   text-align: center;
-  padding: .5rem 1rem;
+  padding: .5rem .25rem;
   color: #7F2422;
   display: flex;
   flex-direction: column;
@@ -9153,9 +9153,12 @@ section h1 {
   flex-shrink: 0; }
 
 .events_upcomming__event-date-day {
-  font-size: 2rem;
+  font-size: 1.7rem;
   font-weight: bold;
   line-height: 1.7rem; }
+
+.events_upcomming__event-date-day--twoday {
+  font-size: 1.4rem; }
 
 .events_upcomming__event-info {
   background: rgba(255, 255, 255, 0.1);
